# ChangeLog for media-video/qnapi
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header

  18 Oct 2013; Michał Ziąbkowski <mziab@o2.pl> qnapi-0.1.6_rc2-r1.ebuild:
  Fixed slots in Qt deps.

  07 Jun 2013; Michał Ziąbkowski <mziab@o2.pl> qnapi-0.1.6_rc2-r1.ebuild:
  Bumped to EAPI=4, so that newer kde4-functions.eclass doesn't complain.

  05 May 2011; Michał Ziąbkowski <mziab@o2.pl> qnapi-0.1.6_rc2-r1.ebuild:
  Bumped EAPI to appease kde4-base.eclass.

  26 Feb 2010; Michał Ziąbkowski <mziab@o2.pl> -qnapi-0.1.6_rc2.ebuild:
  Removed old ebuild.

*qnapi-0.1.6_rc2-r1 (25 Feb 2010)

  25 Feb 2010; Michał Ziąbkowski <mziab@o2.pl> +qnapi-0.1.6_rc2-r1.ebuild,
  +files/qnapi-0.1.6_rc2-gentoo.patch:
  Bumped with a port of the sunrise ebuild with some minor changes.

  29 Jan 2010; Michał Ziąbkowski <mziab@o2.pl> qnapi-0.1.6_rc2.ebuild:
  Ported to qt4-r2.

  12 Jan 2010; Piotr Szymaniak <lazy_bum@o2.pl> ChangeLog:
  Stable on amd64, removed old version.

  05 Mar 2009; Michał Ziąbkowski <mziab@o2.pl> +qnapi-0.1.6_rc2.ebuild:
  Bumped.

  07 Feb 2009; Michał Ziąbkowski <mziab@o2.pl> qnapi-0.1.5-r1.ebuild:
  Fixed monolithic Qt4 dep.

  29 Jul 2008; Michał Ziąbkowski <mziab@o2.pl> qnapi-0.1.5-r1.ebuild:
  Replaced qt4_min_version.

  12 Jun 2008; Michał Ziąbkowski <mziab@o2.pl> qnapi-0.1.5-r1.ebuild:
  Added EAPI.

  12 Jun 2008; Michał Ziąbkowski <mziab@o2.pl> -qnapi-0.1.4-r1.ebuild,
  -qnapi-0.1.5.ebuild, +qnapi-0.1.5-r1.ebuild:
  Fixed split Qt deps.

  22 May 2008; Michał Ziąbkowski <mziab@o2.pl> qnapi-0.1.5.ebuild:
  Missed license change. Fixed.

  22 May 2008; Michał Ziąbkowski <mziab@o2.pl> +qnapi-0.1.5.ebuild:
  Bumped.

  21 May 2008; Michał Ziąbkowski <mziab@o2.pl> -qnapi-0.1.ebuild,
  -qnapi-0.1.1.ebuild, -qnapi-0.1.4.ebuild:
  Removed cruft.

  15 Apr 2008; Piotr Szymaniak <lazy_bum@o2.pl> qnapi-0.1.4-r1.ebuild:
  Fixed src_install.

  09 Apr 2008; Michał Ziąbkowski <mziab@o2.pl> qnapi-0.1.4.ebuild,
  +qnapi-0.1.4-r1.ebuild: