@@ -1,1 +1,1 @@
-DIST qnapi-0.1.6-rc2.tar.gz 211567 SHA256 a2ae2d0b5d800565493c8840f5f584d480daaee1f01742689d927fdf68c5150a SHA512 6a12b6a0ce2edc2ec07496a3f0c068d9bc51968eafb5ba08c3849fcde93d10b5eaf0647036e61f300773fb4f22ad5d0ac1ac62360e183e558a77aa23c03cb6f6 WHIRLPOOL be08db708afcef4dee7a0f011573e7f815d08a514e61a1aa9f761e093e62735db358fa5ed03f0af64c2a36f2793b598468a7f5204b688abf1d94e0995f8f44c5
+DIST qnapi-0.1.8.tar.gz 1210682 SHA256 83b4d54addc189df965a6a429918cadb904a201e3b250c26ad1cb97c56554b1a SHA512 485d3a270604d0a5d09805d34dcd73e1788a23b5777cda0b9a98f2932ec94e63ddf46efb7a2234aaa8fe72b8bbc2f2c57f9c99c8889d590fde059ae523db2747 WHIRLPOOL 44df467c6a5465a8a22bfa7ad704e10f5c686e67f827a524cd7ebeecf7cd303df80c30dd84dede20cae2f891a5e7ce71a885ad4d030b8af8b2a4d4227b9ac106
