@@ -1,0 +1,32 @@
+# Copyright 1999-2015 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: $
+
+EAPI=5
+
+inherit qmake-utils
+
+DESCRIPTION="Free software for automatic fetching movie subtitles using online databases"
+HOMEPAGE="http://qnapi.github.io"
+SRC_URI="https://github.com/QNapi/qnapi/releases/download/${PV}/${P}.tar.gz"
+
+LICENSE="GPL-2"
+SLOT="0"
+KEYWORDS="~amd64 ~x86"
+IUSE=""
+
+DEPEND="dev-qt/qtnetwork:5
+	dev-qt/qtgui:5
+	dev-qt/qtwidgets:5
+	dev-qt/qtcore:5
+	dev-qt/qtxml:5"
+RDEPEND="${DEPEND}
+	app-arch/p7zip"
+
+src_configure() {
+	eqmake5
+}
+
+src_install() {
+	emake install INSTALL_ROOT="${D}"
+}
